--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,10 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
+        classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
         classpath 'com.android.tools.build:gradle:3.1.3'
     }
 }
@@ -12,6 +14,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
 }
 
